--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,11 +244,21 @@ h4 a:hover {
   color: var(--color__theme);
   user-select: none;
 }
+@media screen and (max-width: 767px) {
+  .section-title .subtitle {
+    font-size: 2.4rem;
+  }
+}
 .section-title .title {
   font-size: 4.6rem;
   font-weight: 600;
   line-height: 1.3;
   max-width: 55rem;
+}
+@media screen and (max-width: 767px) {
+  .section-title .title {
+    font-size: 3.6rem;
+  }
 }
 
 .breadcrumb {
@@ -286,6 +296,12 @@ h4 a:hover {
   border-radius: 5rem;
   transition: all 0.2s ease-in-out;
 }
+@media screen and (max-width: 767px) {
+  .btn__secondary {
+    gap: 1rem;
+    padding: 1.5rem 2.5rem;
+  }
+}
 .btn__secondary:hover {
   background-color: var(--color__theme);
   border-color: var(--color__theme);
@@ -304,6 +320,12 @@ h4 a:hover {
   padding: 1.8rem 4rem;
   border-radius: 5rem;
   transition: all 0.2s ease-in-out;
+}
+@media screen and (max-width: 767px) {
+  .btn__secondary__alt {
+    gap: 1rem;
+    padding: 1.5rem 2.5rem;
+  }
 }
 .btn__secondary__alt:hover {
   background-color: var(--color__white);
@@ -489,11 +511,11 @@ select:-webkit-autofill:focus {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1024;
   transition: all 0.3s ease;
   padding: 1rem 0;
   background-color: var(--color__white);
   box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.1);
+  z-index: 1024;
 }
 @media screen and (min-width: 992px) {
   .header {
@@ -590,22 +612,95 @@ select:-webkit-autofill:focus {
   position: fixed;
   top: 0;
   height: 100%;
-  left: -36rem;
-  width: 35rem;
-  padding: 1rem;
+  left: -38rem;
+  width: 37rem;
+  padding: 2rem;
+  z-index: 1024;
   background-color: var(--color__white);
   box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.1);
   transition: all 0.2s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
 }
 .mobile-menu.is-menu-open {
   left: 0;
+}
+.mobile-menu .mobile-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.mobile-menu .close-menu {
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+}
+.mobile-menu .menu {
+  margin: 2rem 0;
+}
+.mobile-menu .main-menu > li {
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 2rem;
+}
+.mobile-menu .main-menu > li + li {
+  margin-top: 2rem;
+}
+.mobile-menu .main-menu > li a {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.mobile-menu .main-menu .sub-menu {
+  display: none;
+  padding-left: 1rem;
+  padding-top: 0.5rem;
+}
+.mobile-menu .main-menu .sub-menu a {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  display: block;
+}
+.mobile-menu .main-menu .menu-item-has-submenu > a::after {
+  content: "\f078";
+  font-family: "Font Awesome 5 Pro";
+  font-weight: 300;
+}
+.mobile-menu h4 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.3);
+  padding-bottom: 0.5rem;
+}
+.mobile-menu .menu-footer {
+  margin-top: auto;
+}
+.mobile-menu .menu-footer .social-media {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+.mobile-menu .menu-footer .social-media a {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background-color: var(--color__theme);
+  color: var(--color__white);
+  display: grid;
+  place-content: center;
+  font-size: 1.4rem;
 }
 
 /*--------------------------------------------------------------
     [ ## Header  End]
 --------------------------------------------------------------*/
 main {
-  margin-top: 11rem;
+  margin-top: 8rem;
+}
+@media screen and (min-width: 992px) {
+  main {
+    margin-top: 11rem;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -626,11 +721,26 @@ main {
   z-index: -1;
 }
 .heroSlider .slide__content .title {
-  font-size: 8rem;
+  font-size: 4.5rem;
   font-weight: bold;
   color: var(--color__white);
   font-family: var(--font-display);
   max-width: 90rem;
+}
+@media screen and (min-width: 576px) {
+  .heroSlider .slide__content .title {
+    font-size: 5.2rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .heroSlider .slide__content .title {
+    font-size: 6rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .heroSlider .slide__content .title {
+    font-size: 8rem;
+  }
 }
 .heroSlider .slide__content .listed__feature {
   display: inline-flex;
@@ -643,6 +753,11 @@ main {
   font-weight: 600;
   display: flex;
   align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .heroSlider .slide__content .listed__feature li {
+    font-size: 1.4rem;
+  }
 }
 .heroSlider .slide__content .listed__feature li + li::before {
   content: "";
@@ -657,6 +772,11 @@ main {
   margin-top: 4rem;
   display: flex;
   gap: 2rem;
+}
+@media screen and (max-width: 767px) {
+  .heroSlider .slide__content .button__groups {
+    gap: 1;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -689,6 +809,9 @@ main {
   color: var(--color__theme);
   font-weight: 600;
 }
+.flat__features .features__item .desc {
+  font-size: 1.5rem;
+}
 
 /*--------------------------------------------------------------
     [ Flat Feature Section End ]
@@ -706,12 +829,22 @@ main {
   color: var(--color__theme);
   user-select: none;
 }
+@media screen and (max-width: 767px) {
+  .advantages .section__content .subtitle {
+    font-size: 2.4rem;
+  }
+}
 .advantages .section__content .title {
   font-size: 4.6rem;
   font-weight: 600;
   max-width: 55rem;
   margin-bottom: 2rem;
   line-height: 1.3;
+}
+@media screen and (max-width: 767px) {
+  .advantages .section__content .title {
+    font-size: 3.6rem;
+  }
 }
 .advantages .section__content blockquote {
   border-left: 0.8rem solid var(--color__theme);
@@ -727,10 +860,21 @@ main {
 .advantages .image__mockup {
   position: relative;
   padding-bottom: 8rem;
+  max-width: 65rem;
+  margin: 0 auto;
+}
+@media screen and (max-width: 767px) {
+  .advantages .image__mockup {
+    padding-bottom: 6rem;
+  }
 }
 .advantages .image__mockup .img1 {
-  width: calc(100% - 15rem);
   border-radius: 1rem;
+}
+@media screen and (min-width: 576px) {
+  .advantages .image__mockup .img1 {
+    width: calc(100% - 15rem);
+  }
 }
 .advantages .image__mockup .img2 {
   position: absolute;
@@ -738,6 +882,21 @@ main {
   border-radius: 1rem;
   bottom: 0;
   right: 0;
+}
+@media screen and (max-width: 575px) {
+  .advantages .image__mockup .img2 {
+    width: 25rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .advantages .image__mockup .img2 {
+    width: 28rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages .image__mockup .img2 {
+    width: auto;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -836,6 +995,7 @@ main {
 }
 .our__works .works__items .thumbnail img {
   height: 38rem;
+  width: 100%;
   background-color: #eee;
   object-fit: cover;
   object-position: center;
@@ -901,8 +1061,10 @@ main {
 .video__promo {
   padding: 10rem 0;
 }
-.video__promo .video__wrapper {
-  padding: 0 5.5rem;
+@media screen and (min-width: 768px) {
+  .video__promo .video__wrapper {
+    padding: 0 5.5rem;
+  }
 }
 .video__promo .video__wrapper .swiper-slide {
   position: relative;
@@ -939,6 +1101,11 @@ main {
   box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.3);
   border-radius: 50%;
 }
+@media screen and (max-width: 767px) {
+  .video__promo .video__wrapper .nav__controler {
+    display: none;
+  }
+}
 .video__promo .video__wrapper .nav__controler.slide__prev {
   left: 2.6rem;
 }
@@ -955,8 +1122,10 @@ main {
 .contact__section {
   padding: 10rem 0;
 }
-.contact__section .contacts__list {
-  margin-left: 5rem;
+@media screen and (min-width: 1200px) {
+  .contact__section .contacts__list {
+    margin-left: 5rem;
+  }
 }
 .contact__section .contacts__list li {
   display: flex;
@@ -1026,6 +1195,16 @@ footer .footer__top .wiget__title {
   font-size: 2rem;
   margin-bottom: 2rem;
 }
+footer .footer__top .links a {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+footer .footer__top .links a:before {
+  content: "\f185";
+  font-family: "Font Awesome 5 Pro";
+  font-weight: 600;
+}
 footer .footer__top ul li {
   color: #7a7a7a;
   font-size: 1.4rem;
@@ -1050,11 +1229,16 @@ footer .footer__bottom {
 }
 footer .footer__bottom .footer__inner {
   padding: 1.5rem 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   background-color: var(--color__theme);
   border-radius: 4px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  footer .footer__bottom .footer__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 footer .footer__bottom p {
   color: white;
@@ -1063,7 +1247,14 @@ footer .footer__bottom p {
 }
 footer .footer__bottom .social {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 1rem;
+}
+@media screen and (max-width: 767px) {
+  footer .footer__bottom .social {
+    margin-top: 1rem;
+  }
 }
 footer .footer__bottom .social a {
   font-size: 1.4rem;
