--- a/assets/sass/base/_section-title.scss
+++ b/assets/sass/base/_section-title.scss
@@ -6,11 +6,19 @@
         opacity: .15;
         color: var(--color__theme);
         user-select: none;
+
+        @include md-down {
+            font-size: 2.4rem;
+        }
     }
     .title {
         font-size: 4.6rem;
         font-weight: 600;
         line-height: 1.3;
         max-width: 55rem;
+
+        @include md-down {
+            font-size: 3.6rem;
+        }
     }
 }
