--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -29,6 +29,11 @@
     border-radius: 5rem;
     transition: all .2s ease-in-out;
 
+    @include md-down {
+        gap: 1rem;
+        padding: 1.5rem 2.5rem;
+    }
+
     &:hover {
         background-color: var(--color__theme);
         border-color: var(--color__theme);
@@ -47,6 +52,11 @@
     padding: 1.8rem 4rem;
     border-radius: 5rem;
     transition: all .2s ease-in-out;
+    
+    @include md-down {
+        gap: 1rem;
+        padding: 1.5rem 2.5rem;
+    }
 
     &:hover {
         background-color: var(--color__white);
