--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -1,5 +1,8 @@
 main {
-    margin-top: 11rem;
+    margin-top: 8rem;
+    @include lg-up {
+        margin-top: 11rem ;
+    }
 }
 /*--------------------------------------------------------------
     [ ## Hero Section Start ]
@@ -21,11 +24,21 @@ main {
     }
     .slide__content {
         .title {
-            font-size: 8rem;
+            font-size: 4.5rem;
             font-weight: bold;
             color: var(--color__white);
             font-family: var(--font-display);
             max-width: 90rem;
+
+            @include sm-up {
+                font-size: 5.2rem;
+            }
+            @include md-up {
+                font-size: 6rem;
+            }
+            @include lg-up {
+                font-size: 8rem;
+            }
         }
         .listed__feature {
             display: inline-flex;
@@ -37,6 +50,9 @@ main {
                 font-weight: 600;
                 display: flex;
                 align-items: center;
+                @include md-down {
+                    font-size: 1.4rem;
+                }
                 & + li {
                     &::before {
                         content: '';
@@ -54,6 +70,9 @@ main {
             margin-top: 4rem;
             display: flex;
             gap: 2rem;
+            @include md-down {
+                gap: 1;
+            }
         }
     }
 }
@@ -90,6 +109,9 @@ main {
             color: var(--color__theme);
             font-weight: 600;
         }
+        .desc {
+            font-size: 1.5rem;
+        }
     }
 }
 /*--------------------------------------------------------------
@@ -109,6 +131,10 @@ main {
             opacity: .15;
             color: var(--color__theme);
             user-select: none;
+
+            @include md-down {
+                font-size: 2.4rem;
+            }
         }
         .title {
             font-size: 4.6rem;
@@ -116,6 +142,9 @@ main {
             max-width: 55rem;
             margin-bottom: 2rem;
             line-height: 1.3;
+            @include md-down {
+                font-size: 3.6rem;
+            }
         }
 
         blockquote {
@@ -134,9 +163,17 @@ main {
     .image__mockup {
         position: relative;
         padding-bottom: 8rem;
+        max-width: 65rem;
+        margin: 0 auto;
+        @include md-down {
+            padding-bottom: 6rem;
+        }
         .img1 {
-            width: calc(100% - 15rem);
             border-radius: 1rem;
+            @include sm-up {
+                width: calc(100% - 15rem);
+
+            }
         }
         .img2 {
             position: absolute;
@@ -144,6 +181,15 @@ main {
             border-radius: 1rem;
             bottom: 0;
             right: 0;
+            @include sm-down {
+                width: 25rem;
+            }
+            @include lg-up {
+                width: 28rem;
+            }
+            @include xl-up {
+                width: auto;
+            }
         }
     }
 }
@@ -245,6 +291,7 @@ main {
             position: relative;
             img {
                 height: 38rem;
+                width: 100%;
                 background-color: #eee;
                 object-fit: cover;
                 object-position: center;
@@ -322,7 +369,10 @@ main {
     padding: 10rem 0;
 
     .video__wrapper {
-        padding: 0 5.5rem;
+        @include md-up {
+            padding: 0 5.5rem;
+
+        }
         .swiper-slide {
             position: relative;
             transition: all .3s;
@@ -358,6 +408,9 @@ main {
             padding: 0;
             box-shadow: 0 0 .6rem rgba(#000, .3);
             border-radius: 50%;
+            @include md-down {
+                display: none;
+            }
             &.slide__prev {
                 left: 2.6rem;
             }
@@ -379,7 +432,9 @@ main {
     padding: 10rem 0;
 
     .contacts__list {
-        margin-left: 5rem;
+        @include xl-up {
+            margin-left: 5rem;
+        }
         li {
             display: flex;
             flex-wrap: wrap;
