--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -8,7 +8,7 @@
     width: 100%;
     transition: all 0.3s ease;
     padding: 1rem 0;
-    background-color: var(--color__white);
+    background-color: #fafbe5;
     box-shadow: 0 0 .8rem rgba(#000, .1);
     z-index: 1024;
 
