--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,11 @@ h4 a:hover {
   text-decoration: none;
 }
 
+.glightbox-clean .gslide-title {
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+}
+
 /**
  * Hide element while making it readable for screen readers
  */
@@ -1449,8 +1454,61 @@ main {
 /*--------------------------------------------------------------
     [ About Section End ]
 --------------------------------------------------------------*/
-.about__us {
+.about__us__overview {
   padding: 10rem 0;
+}
+.about__us__overview .section__content .title {
+  font-size: 4.6rem;
+  font-weight: 600;
+  line-height: 1.3;
+  margin-bottom: 3rem;
+}
+@media screen and (max-width: 767px) {
+  .about__us__overview .section__content .title {
+    font-size: 3.6rem;
+  }
+}
+.about__us__overview .section__content p + p {
+  margin-top: 2rem;
+}
+.about__us__overview .section__image {
+  padding: 7rem 0 0 7rem;
+  position: relative;
+  margin-top: 5rem;
+}
+.about__us__overview .section__image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 8rem;
+  bottom: 8rem;
+  border: 2rem solid var(--color__secondary);
+  z-index: -1;
+}
+
+.certificates__wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 3rem;
+}
+@media screen and (min-width: 576px) {
+  .certificates__wrapper {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+@media screen and (min-width: 768px) {
+  .certificates__wrapper {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .certificates__wrapper {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+}
+.certificates__wrapper .item {
+  border: 1rem solid var(--color__theme);
 }
 
 /*--------------------------------------------------------------
