--- a/assets/sass/base/_headings.scss
+++ b/assets/sass/base/_headings.scss
@@ -22,3 +22,7 @@ h4 a:hover {
 	color: inherit;
 	text-decoration: none;
 }
+.glightbox-clean .gslide-title {
+	margin-bottom: .5rem;
+	font-weight: 600;
+}
