--- a/assets/sass/pages/_about-us.scss
+++ b/assets/sass/pages/_about-us.scss
@@ -1,3 +1,57 @@
-.about__us {
+.about__us__overview {
     padding: 10rem 0;
+
+    .section__content {
+
+        .title {
+            font-size: 4.6rem;
+            font-weight: 600;
+            line-height: 1.3;
+            margin-bottom: 3rem;
+
+            @include md-down {
+                font-size: 3.6rem;
+            }
+        }
+        p {
+            & + p {
+                margin-top: 2rem;
+            }
+        }
+    }
+
+    .section__image {
+        padding: 7rem 0 0 7rem;
+        position: relative;
+        margin-top: 5rem;
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 8rem;
+            bottom: 8rem;
+            border: 2rem solid var(--color__secondary);
+            z-index: -1;
+        }
+    }
+}
+
+.certificates__wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 3rem;
+    @include sm-up {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+    @include md-up {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+    @include xl-up {
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+    }
+
+    .item {
+        border: 1rem solid var(--color__theme);
+    }
 }
