--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1511,6 +1511,12 @@ main {
   border: 1rem solid var(--color__theme);
 }
 
+.direction__map iframe {
+  width: 100%;
+  height: 40rem;
+  margin-bottom: -0.7rem;
+}
+
 /*--------------------------------------------------------------
     [ ## Footer Start ]
 --------------------------------------------------------------*/
