--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1458,39 +1458,73 @@ main {
   padding: 10rem 0;
 }
 .about__us__overview .section__content .title {
-  font-size: 4.6rem;
+  font-size: 3rem;
   font-weight: 600;
   line-height: 1.3;
   margin-bottom: 3rem;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 576px) {
   .about__us__overview .section__content .title {
     font-size: 3.6rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .about__us__overview .section__content .title {
+    font-size: 4rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about__us__overview .section__content .title {
+    font-size: 4.6rem;
   }
 }
 .about__us__overview .section__content p + p {
   margin-top: 2rem;
 }
 .about__us__overview .section__image {
-  padding: 7rem 0 0 7rem;
+  padding: 3rem 0 0 3rem;
   position: relative;
   margin-top: 5rem;
+}
+@media screen and (min-width: 576px) {
+  .about__us__overview .section__image {
+    padding: 5rem 0 0 5rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .about__us__overview .section__image {
+    padding: 7rem 0 0 7rem;
+  }
 }
 .about__us__overview .section__image::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  right: 8rem;
-  bottom: 8rem;
-  border: 2rem solid var(--color__secondary);
+  right: 4rem;
+  bottom: 4rem;
+  border: 1rem solid var(--color__secondary);
   z-index: -1;
+}
+@media screen and (min-width: 576px) {
+  .about__us__overview .section__image::before {
+    right: 6rem;
+    bottom: 6rem;
+    border-width: 1.5rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .about__us__overview .section__image::before {
+    right: 8rem;
+    bottom: 8rem;
+    border-width: 2rem;
+  }
 }
 
 .certificates__wrapper {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
-  gap: 3rem;
+  gap: 2rem;
 }
 @media screen and (min-width: 576px) {
   .certificates__wrapper {
@@ -1499,6 +1533,7 @@ main {
 }
 @media screen and (min-width: 768px) {
   .certificates__wrapper {
+    gap: 3rem;
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
@@ -1508,7 +1543,62 @@ main {
   }
 }
 .certificates__wrapper .item {
-  border: 1rem solid var(--color__theme);
+  border: 0.5rem solid var(--color__theme);
+}
+@media screen and (min-width: 992px) {
+  .certificates__wrapper .item {
+    border-width: 1rem;
+  }
+}
+
+.project__details {
+  padding: 10rem 0;
+}
+.project__details .description {
+  margin-top: 3rem;
+}
+.project__details .description .title {
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 1.3;
+  margin-bottom: 3rem;
+}
+@media screen and (min-width: 576px) {
+  .project__details .description .title {
+    font-size: 3.6rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .project__details .description .title {
+    font-size: 4rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .project__details .description .title {
+    font-size: 4.2rem;
+  }
+}
+.project__details .description p + p {
+  margin-top: 2rem;
+}
+.project__details .description .key_info {
+  margin: 2rem 0;
+}
+.project__details .description .key_info li + li {
+  margin-top: 1rem;
+}
+.project__details .project_gallery {
+  margin-top: 10rem;
+}
+.project__details .project_gallery .section-title .title {
+  max-width: 100%;
+}
+.project__details .project_gallery .gallery_item img {
+  height: 30rem;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  background-color: #eee;
 }
 
 .direction__map iframe {
