--- a/assets/sass/pages/_about-us.scss
+++ b/assets/sass/pages/_about-us.scss
@@ -81,3 +81,34 @@
         }
     }
 }
+
+.org__chart {
+    margin: 10rem 0;
+    .section__content {
+        .title {
+            font-size: 3rem;
+            font-weight: 600;
+            line-height: 1.3;
+            margin-bottom: 3rem;
+
+            @include sm-up {
+                font-size: 3.6rem;
+            }
+            @include lg-up {
+                font-size: 4rem;
+            }
+            @include xl-up {
+                font-size: 4.6rem;
+            }
+        }
+        p {
+            & + p {
+                margin-top: 2rem;
+            }
+        }
+    }
+    .section__image {
+        margin-top: 5rem;
+        text-align: center;
+    }
+}
